# version-compare

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml
examples/: example.rs  minimal.rs
src/: cmp.rs  comp_op.rs  compare.rs  lib.rs  manifest.rs  part.rs  test.rs  version.rs  version_compare.rs  version_manifest.rs  version_part.rs
src/core/: mod.rs  version_manifest.rs
src/custom_parts/: mod.rs  pep440.rs
src/parsers/: default.rs  mod.rs
src/schemes/: conda.rs  generic.rs  mod.rs
src/test/: mod.rs  test_version.rs  test_version_set.rs
