[package]
name = "version-compare"
version = "0.0.10"
authors = ["timvisee <timvisee@gmail.com>", "msarahan <msarahan@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/timvisee/version-compare"
repository = "https://github.com/timvisee/version-compare"
documentation = "https://docs.rs/version-compare"
description = "A Rust library to easily compare version numbers, and test them against various comparison operators."
keywords = ["version", "compare", "comparison", "comparing"]
categories = ["parser-implementations"]
edition = "2018"

[badges]
travis-ci = { repository = "timvisee/version-compare" }

[features]
default = []
dev = []

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.1"
enum_dispatch = "0.1.4"