[package]
name = "version-compare"
version = "0.0.11"
authors = ["Tim Visee <3a4fb3964f@sinenomine.email>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/timvisee/version-compare"
documentation = "https://docs.rs/version-compare"
description = "A Rust library to easily compare version numbers, and test them against various comparison operators."
keywords = ["version", "compare", "comparison", "comparing"]
categories = ["parser-implementations"]
edition = "2018"

[badges]
travis-ci = { repository = "timvisee/version-compare" }

[features]
default = []
dev = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
